--- a/app/templates/app/view_ticket.html
+++ b/app/templates/app/view_ticket.html
@@ -32,12 +32,7 @@
                 <td>
                     <div class="hstack gap-2">
                         {% if user_is_organizer or ticket.user == user %}
-                        <a
-                            href="{% url 'edit_ticket' event_id=event.id %}"
-                            class="btn btn-sm btn-outline-secondary"
-                        >
-                            <i class="bi bi-pencil" aria-hidden="true"></i>
-                        </a>
+                    
                         <form
                             action="{% url 'view_ticket' event_id=event.id %}"
                             method="POST"
@@ -68,7 +63,7 @@
                     class="text-center"
                 >
                     {% if user_is_organizer %} No hay entradas vendidas para
-                    este evento {% else %} No tienes entradas para este evento
+                    este evento {% else %} No existen entradas para este evento
                     {% endif %}
                 </td>
             </tr>
