--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,7 +52,7 @@
                         </ul>
                     </div>
 
-                    {% if user.is_organizer %}                    
+                    {% if user.is_organizer or user.is_superuser %}                    
                         <div
                             class="collapse navbar-collapse"
                             id="navbar-content"
