--- a/app/templates/app/events.html
+++ b/app/templates/app/events.html
@@ -17,6 +17,29 @@
         {% endif %}
     </div>
 
+    <form method="get" class="mb-4 row g-3 align-items-end">
+        <div class="col-auto">
+            <label for="date" class="form-label"
+                >Filtrar desde fecha:</label
+            >
+            <input
+                type="date"
+                name="date"
+                id="date"
+                class="form-control"
+                value="{{ selected_date|date:'Y-m-d' }}"
+            />
+        </div>
+        <div class="col-auto">
+            <button type="submit" class="btn btn-primary">Filtrar</button>
+            {% if selected_date %}
+            <a href="{% url 'events' %}" class="btn btn-secondary"
+                >Ver todos</a
+            >
+            {% endif %}
+        </div>
+    </form>
+    
     <table class="table">
         <thead>
             <tr>
