--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,6 +49,9 @@
                             <li class="nav-item">
                                 {% navbar_link 'events' 'Eventos' %}
                             </li>
+                            <li class="nav-item">
+                                {% navbar_link 'add_venues' 'Ubicaciones' %}
+                            </li>
                         </ul>
                     </div>
 
