Agrega vista de todas las ubicaciones disponibles actualmente

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,7 +50,7 @@
                                 {% navbar_link 'events' 'Eventos' %}
                             </li>
                             <li class="nav-item">
-                                {% navbar_link 'add_venues' 'Ubicaciones' %}
+                                {% navbar_link 'venues' 'Ubicaciones' %}
                             </li>
                         </ul>
                     </div>
