--- a/app/templates/app/venues/venues.html
+++ b/app/templates/app/venues/venues.html
@@ -53,9 +53,12 @@
                             <button class="btn btn-sm btn-outline-primary me-2">
                                 <i class="bi bi-pencil"></i>
                             </button>
-                            <button class="btn btn-sm btn-outline-danger">
-                                <i class="bi bi-trash"></i>
-                            </button>
+                            <form action="{% url 'venue_delete' venue.id %}" method="POST" class="d-inline">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-sm btn-outline-danger">
+                                    <i class="bi bi-trash"></i>
+                                </button>
+                            </form>
                         </td>
                     </tr>
 
