Agrega funcionalidad de editar ubicaciones

--- a/app/templates/app/venues/venues.html
+++ b/app/templates/app/venues/venues.html
@@ -50,9 +50,9 @@
                             >
                                 <i class="bi bi-eye"></i>
                             </button>
-                            <button class="btn btn-sm btn-outline-primary me-2">
+                            <a href="{% url 'venue_edit' venue.id %}" class="btn btn-sm btn-outline-primary me-2">
                                 <i class="bi bi-pencil"></i>
-                            </button>
+                            </a>
                             <form action="{% url 'venue_delete' venue.id %}" method="POST" class="d-inline">
                                 {% csrf_token %}
                                 <button type="submit" class="btn btn-sm btn-outline-danger">
