Agrega restriccion en vista de organizador

--- a/app/templates/app/edit_ticket.html
+++ b/app/templates/app/edit_ticket.html
@@ -12,7 +12,7 @@
                         <div class="mb-3">
                             <label class="form-label">Tipo de Ticket</label>
                             <select name="ticket_type" class="form-select">
-                                <option value="GENERAL" {% if ticket.type == 'GENERAL' %}selected{% endif %}>General</option>
+                                <option value="GENERAL" {% if ticket.type == 'GENERAL' %}selected{% endif %}>GENERAL</option>
                                 <option value="VIP" {% if ticket.type == 'VIP' %}selected{% endif %}>VIP</option>
                             </select>
                         </div>
