Agrega validacion de numero positivo en la capacidad de ubicacion desde el frontend

--- a/app/templates/app/venues/add_venues.html
+++ b/app/templates/app/venues/add_venues.html
@@ -71,6 +71,7 @@
                                 name="capacity" 
                                 placeholder="Ej: 1000" 
                                 value="{{ data.capacity|default:'' }}"
+                                min="1"
                                 required
                             >
                         </div>
