--- a/app/templates/app/venues/edit_venue.html
+++ b/app/templates/app/venues/edit_venue.html
@@ -67,6 +67,7 @@
                                 id="capacity" 
                                 name="capacity" 
                                 value="{{ data.capacity|default:venue.capacity }}"
+                                min="1"
                                 required
                             >
                         </div>
