Añade validaciones de inputs

--- a/app/templates/app/purchase_ticket.html
+++ b/app/templates/app/purchase_ticket.html
@@ -77,6 +77,7 @@
                                     maxlength="16"
                                     placeholder="1234 5678 9012 3456"
                                     required
+                                    oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 16);"
                                 />
                             </div>
 
@@ -102,9 +103,11 @@
                                         type="text"
                                         class="form-control"
                                         id="cvv"
+                                        pattern="[0-9]{3}"
                                         maxlength="3"
                                         placeholder="123"
                                         required
+                                        oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 3);"
                                     />
                                 </div>
                             </div>
@@ -119,6 +122,7 @@
                                     id="nombreTarjeta"
                                     placeholder="Juan Pérez"
                                     required
+                                    oninput="this.value = this.value.replace(/[^a-zA-ZáéíóúÁÉÍÓÚñÑ\s]/g, '');"
                                 />
                             </div>
                         </div>
@@ -199,7 +203,7 @@
                                         confirmButtonText: "OK",
                                     }).then((result) => {
                                         if (result.isConfirmed) {
-                                            this.submit(); 
+                                            this.submit();
                                         }
                                     });
                                 }, 2000);
